tests/snapshots/generate_plan_tests__pin_archive.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "phases": {
    "setup": {
      "name": "setup"
    }
  },
  "start": {}
}
