tests/snapshots/generate_plan_tests__ruby_3.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "BUNDLE_GEMFILE": "/app/Gemfile",
    "GEM_HOME": "/usr/local/rvm/gems/3.2.1",
    "GEM_PATH": "/usr/local/rvm/gems/3.2.1:/usr/local/rvm/gems/3.2.1@global",
    "MALLOC_ARENA_MAX": "2",
    "NIXPACKS_METADATA": "ruby"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install"
      ]
    },
    "install": {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "cmds": [
        "bundle install"
      ],
      "onlyIncludeFiles": [
        "Gemfile",
        "Gemfile.lock"
      ],
      "cacheDirectories": [
        "/root/.bundle/cache"
      ],
      "paths": [
        "/usr/local/rvm/rubies/3.2.1/bin",
        "/usr/local/rvm/gems/3.2.1/bin",
        "/usr/local/rvm/gems/3.2.1@global/bin"
      ]
    },
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "rustc"
      ],
      "nixOverlays": [],
      "nixpkgsArchive": "[archive]",
      "aptPkgs": [
        "procps",
        "git",
        "curl",
        "autoconf",
        "bison",
        "build-essential",
        "libssl-dev",
        "libyaml-dev",
        "libreadline6-dev",
        "zlib1g-dev",
        "libncurses5-dev",
        "libffi-dev",
        "libgdbm6",
        "libgdbm-dev",
        "libdb-dev"
      ],
      "cmds": [
        "curl -fsSL https://github.com/rbenv/rbenv-installer/raw/HEAD/bin/rbenv-installer | bash -s stable && printf '\\neval \"$(~/.rbenv/bin/rbenv init -)\"' >> /root/.profile && . /root/.profile && rbenv install 3.2.1 && rbenv global 3.2.1 && gem install bundler:2.4.9"
      ],
      "onlyIncludeFiles": [],
      "paths": [
        "$HOME/.rbenv/bin"
      ]
    }
  },
  "start": {
    "cmd": "ruby --enable-yjit app.rb"
  }
}
