tests/snapshots/generate_plan_tests__scheme.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "NIXPACKS_METADATA": "scheme"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install",
        "setup"
      ],
      "cmds": [
        "haunt build"
      ]
    },
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "haunt",
        "guile"
      ],
      "nixOverlays": [],
      "nixpkgsArchive": "[archive]"
    }
  },
  "start": {
    "cmd": "guile init.scm --auto-compile"
  }
}
