tests/snapshots/generate_plan_tests__shell_hello.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "NIXPACKS_START_CMD": "./start.sh"
  },
  "phases": {
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "cowsay"
      ],
      "nixpacksArchive": "[archive]"
    }
  },
  "start": {
    "cmd": "./start.sh"
  }
}
