tests/snapshots/generate_plan_tests__swift_custom_version.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "nixpacksVersion": "[version]",
  "buildImage": "[build_image]",
  "phases": [
    {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "commands": [
        "swift package resolve"
      ],
      "onlyIncludeFiles": [
        "Package.swift"
      ]
    },
    {
      "name": "setup",
      "nixPackages": [
        {
          "name": "coreutils"
        },
        {
          "name": "swift"
        },
        {
          "name": "clang"
        },
        {
          "name": "zlib"
        },
        {
          "name": "zlib.dev"
        }
      ],
      "nixpacksArchive": "[archive]"
    },
    {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "commands": [
        "CC=clang++ swift build -c release --static-swift-stdlib",
        "cp ./.build/release/swift ./swift && rm -rf ./.build"
      ]
    }
  ],
  "startPhase": {
    "cmd": "./swift"
  }
}
